--- a/app/src/main/res/layout/activity_edit_budget.xml
+++ b/app/src/main/res/layout/activity_edit_budget.xml
@@ -38,7 +38,14 @@
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/income_category" />
+        app:layout_constraintTop_toBottomOf="@+id/income_category" >
+
+        <FrameLayout
+            android:id="@+id/frag_placeholder_savings"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp" />
+    </FrameLayout>
 
     <EditText
         android:id="@+id/bills_category"
@@ -113,20 +120,12 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/savings_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/debt_reduction_category"
-        android:importantForAutofill="no" />
-
-    <FrameLayout
-        android:id="@+id/frag_placeholder_savings"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/savings_category" />
+        app:layout_constraintTop_toBottomOf="@+id/debt_reduction_category" />
 
     <Button
         android:id="@+id/income_edit_button"
@@ -135,6 +134,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="handleEditButton"
         android:text="@string/income_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/income_category"
@@ -148,6 +148,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="16dp"
+        android:onClick="handleEditButton"
         android:text="@string/bill_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bills_category"
@@ -160,6 +161,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="handleEditButton"
         android:text="@string/discretionary_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/discretionary_category"
@@ -172,6 +174,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="handleEditButton"
         android:text="@string/debt_reduction_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/debt_reduction_category"
@@ -184,6 +187,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:onClick="handleEditButton"
         android:text="@string/savings_edit"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/savings_category"
