--- a/app/src/main/res/layout/activity_edit_budget.xml
+++ b/app/src/main/res/layout/activity_edit_budget.xml
@@ -38,14 +38,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/income_category" >
-
-        <FrameLayout
-            android:id="@+id/frag_placeholder_savings"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginStart="16dp" />
-    </FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/income_category" />
 
     <EditText
         android:id="@+id/bills_category"
@@ -126,6 +119,14 @@
         android:text="@string/savings_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/debt_reduction_category" />
+
+    <FrameLayout
+        android:id="@+id/frag_placeholder_savings"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/savings_category" />
 
     <Button
         android:id="@+id/income_edit_button"
