--- a/app/src/main/res/layout/fragment_edit_budget.xml
+++ b/app/src/main/res/layout/fragment_edit_budget.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/edit_budget_fragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".EditBudgetFragment">
 
     <EditText
