--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -52,10 +52,10 @@
         android:text="@string/update_data_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        app:layout_constraintTop_toBottomOf="@+id/assign_category_spinner" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/assign_category_spinner"
         android:layout_width="379dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
