--- a/app/src/main/res/layout/activity_edit_budget.xml
+++ b/app/src/main/res/layout/activity_edit_budget.xml
@@ -9,14 +9,13 @@
 
 
 
-    <EditText
+    <TextView
         android:id="@+id/income_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/income_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/income_category" />
 
-    <EditText
+    <TextView
         android:id="@+id/bills_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,7 +37,6 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/bills_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +49,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/bills_category" />
 
-    <EditText
+    <TextView
         android:id="@+id/discretionary_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,7 +57,6 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/discretionary_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,7 +69,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/discretionary_category" />
 
-    <EditText
+    <TextView
         android:id="@+id/debt_reduction_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,7 +77,6 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/debt_reduction_text"
         app:layout_constraintStart_toStartOf="parent"
@@ -93,7 +89,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/debt_reduction_category" />
 
-    <EditText
+    <TextView
         android:id="@+id/savings_category"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -101,7 +97,6 @@
         android:layout_marginTop="16dp"
         android:ems="10"
         android:importantForAutofill="no"
-        android:inputType="textPersonName"
         android:minHeight="48dp"
         android:text="@string/savings_text"
         app:layout_constraintStart_toStartOf="parent"
