--- a/app/src/main/res/layout/fragment_edit_data.xml
+++ b/app/src/main/res/layout/fragment_edit_data.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     tools:context=".EditDataFragment">
 
-    <TextView
+    <EditText
         android:id="@+id/editDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <EditText
         android:id="@+id/editDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editDate" />
 
-    <TextView
+    <EditText
         android:id="@+id/editAmount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
